# matrix_library

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  Makefile  README.md  README_8md.html  cpu__simple__example_8cc.html  cpu__simple__example_8cc__incl.dot  cpu__simple__test_8cc.html  cpu__simple__test_8cc__incl.dot  dir_000000_000001.html  dir_000002_000003.html  dir_000004_000001.html  dir_1f8496e0e7c745c0ff184d0300c730e2.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_8e25981d19fa7c4db5b59a1bdb9f7dd2.html  dir_8e25981d19fa7c4db5b59a1bdb9f7dd2_dep.dot  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.dot  dir_ddd467715ef9a87805666dfe4941b391.html  dir_ddd467715ef9a87805666dfe4941b391_dep.dot  examples_2CMakeLists_8txt.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  matrix__library_2CMakeLists_8txt.html  matrix__library_2cpu__simple_2CMakeLists_8txt.html  matrix__library_2utils_2CMakeLists_8txt.html  matrix__ops_8h.html  matrix__ops_8h__dep__incl.dot  matrix__ops_8h__incl.dot  matrix__ops_8h_source.html  matrix__utils_8h.html  matrix__utils_8h__dep__incl.dot  matrix__utils_8h__incl.dot  matrix__utils_8h_source.html  (+14 more)
.github/: dependabot.yml
cmake/: UpdateSubmodules.cmake
examples/: CMakeLists.txt  cpu_simple_example.cc  matrix_utils_example.cc
matrix_library/: CMakeLists.txt
scripts/: test-ci.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  (+12 more)
tests/: CMakeLists.txt  cpu_simple_test.cc  utils_test.cc
(+5 files in other folders)
